# homework_1

./: pyproject.toml
homework_1/: code.py  code2.py
tests/: test_code.py  test_code2.py
