[tool.poetry]
name = "homework-1"
version = "0.1.0"
description = ""
authors = ["Зубайраева Ольга <vadelevich2013@yandex.ru>"]
readme = "README.md"
packages = [{include = "homework_1"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
